[package]
name = "lrt"
version = "0.0.0-replace-me"
edition = "2024"

[[bin]]
name = "lrt"
path = "./src/main.rs"

[[bin]]
name = "lgui"
path = "./src/lgui.rs"

[dependencies]
libloading = "0.8"
lrt_macros = { version = "0.0.0-replace-me", path = "../macros" }
lrtexec_lib = { version = "0.0.0-replace-me", path = "../types" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[features]
no_gui = []

[build-dependencies]
tauri-winres = "0.3"
