[package]
name = "smelt"
version = "0.0.0-replace-me"
edition = "2024"

[dependencies]
# Essential
tokio = { version = "1", features = ["rt", "fs"] }
zip = "4"
pastey = "0.1.0"
reqwest = { version = "0.12.20", features = [
  "json",
  "rustls-tls",
], default-features = false }

# TUI
cursive = "0.21.1"

# Console
indicatif = "0.17.11"
inquire = "0.7.5"

# Terminal Macros
terminal = { path = "../terminal" }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
