[package]
name = "lrtexec_lib"
version = "0.0.0-replace-me"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2.174"
libloading = { version = "0.8.8", optional = true }
lrt_macros = { path = "../macros" }
pastey = "0.1.0"
tokio = { version = "1.47.1", features = ["macros", "rt", "sync", "time"] }

[features]
default = ["v_all", "waker"]
waker = ["dep:libloading"]
memory = []

# LRTEXEC Interpreter Versions
v_all = ["v0"]
v0 = []
